added buttons to swipe and matches

--- a/matches.html
+++ b/matches.html
@@ -100,6 +100,13 @@
         .div {
           border: solid gold 5px;
         }
+
+        button {
+          background-color: #0E0F0f;
+          color: gold;
+          margin-top: 4%;
+          text-align: center;
+        }
         
 
     </style>
