--- a/main • exist.html
+++ b/main • exist.html
@@ -28,43 +28,38 @@
     <!-------------------------------------->
 
     
-
-  
-
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Cineder</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="./swipe • collection.html">Swipe</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./matches.html">Matches</a>
-              </li> -->
-              <li class="nav-item">
-                <a class="nav-link" href="./groups.html">Groups</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Cineder</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./swipe • collection.html">Swipe</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./matches.html">Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./groups.html">Groups</a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </div>
+  </nav>
 
   
     <div class="container" id="body_container">
-        <!-- <h1><span id="displayed-movie"></span></h1> -->
-
         <div class="card-group">
           <div class="card">
             <img src="https://firebasestorage.googleapis.com/v0/b/cineder-3be64.appspot.com/o/cineder_logos%2FCINEDERLOGO_gold.png?alt=media&token=0922423b-3168-4f55-bfb8-a89afad027fe" class="card-img-top" id="displayed-movie-image" alt="...">
@@ -72,11 +67,7 @@
             <div id="name_greeting"></div>
             
             <div class="card-body">
-              <h3 id="displayed-movie-small">Welcome to Cinéder</h3>
-              <a href="./groups.html"><button class="btn btn-warning" id="startButton" >Looks like you need a group!</button></a>
-              <h4 id="displayed-director"></h4>
-              <h4 id="displayed-year"></h4>
-              <p class="card-text"><small class="text-muted" id="displayed-description"></small></p>
+              <h3 id="displayed-movie-small">Welcome back to Cinéder :)</h3>
             </div>
           </div>
         </div>
