--- a/groups.html
+++ b/groups.html
@@ -25,7 +25,7 @@
       <link rel="stylesheet" href="groups.css">
   </head>
 
-  <body style="background-color: #333333;">
+  <body>
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
