--- a/swipe • collection.html
+++ b/swipe • collection.html
@@ -71,7 +71,7 @@
           <div class="card">
             <img src="https://firebasestorage.googleapis.com/v0/b/cineder-3be64.appspot.com/o/cineder_logos%2FCINEDERLOGO_gold.png?alt=media&token=0922423b-3168-4f55-bfb8-a89afad027fe" class="card-img-top" id="displayed-movie-image" alt="...">
             <div class="card-body">
-              <h3 id="displayed-movie-small">Welcome to Cineder :)</h3>
+              <h6 id="displayed-movie-small">Whatcha feeling like? :)</h3>
               <button class="btn btn-warning" id="startButton" onclick="startSwipe()">Click here to start swiping!</button>
               <h4 id="displayed-director"></h4>
               <h4 id="displayed-year"></h4>
