--- a/edit_profile.html
+++ b/edit_profile.html
@@ -6,105 +6,133 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="edit_profile.css">
+    <link rel="stylesheet" href="/styles/edit_profile.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 
-<div class="container" id = "formDiv">
-    <div class="row">
-        <div class="col-sm">
-            <h5 class="styleTitle">Edit Profile</h5>
-
-            <body style="background-color: #333333;"></body>
-            <div class="container">   
-                <input id="userName" class="styleBox" type="text" placeholder="User Name">
-                <br>
-                <input id="aboutMe" class="styleBox" type="text" placeholder="About Me">
-                <br>
-                <input id="country" class="styleBox" type="text" placeholder="Country">
-                <br>
-                <input id="city" class="styleBox" type="text" placeholder="City">
-                <br>
-            </div>
-            <div class="container">
-                <h5 class="styleTitle">Edit Streaming Service</h5>
-                <input id="amazon" class="styleCheck" type="checkbox">
-                <label class="form-check-label"> Amazon Prime </label>
-                <br>
-                <input id="netflix" class="styleCheck" type="checkbox">
-                <label class="form-check-label"> Netflix </label>
-                <br>
-                <input id="disney" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Disney+ </label>
-                <br>
-                <input id="hulu" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Hulu </label>
-                <br>
-            </div>
-            <div class="container">
-                <h5 class="styleTitle">Edit Favorite Genre</h5>
-                <input id="anime" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Anime </label>
-                <br>
-                <input id="action" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Action </label>
-                <br>
-                <input id="comedy" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Comedy </label>
-                <br>
-                <input id="drama" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Drama </label>
-                <br>
-                <input id="documentary" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Documentary </label>
-                <br>
-                <input id="horror" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Horror </label>
-                <br>
-                <input id="mystery" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Mystery </label>
-                <br>
-                <input id="romance" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Romance </label>
-                <br>
-                <input id="scienceFiction" class="styleBox" type="checkbox">
-                <label class="form-check-label"> Science Fiction </label>
-                <br>
-                <br>
-                <button type="button" id="save" class="btn btn-outline-success">Save</button>
-                <br>
+<body style="background-color: #333333;">
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Cineder</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Swiping Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Group Settings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Matches</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div> 
-</div>   
-            <!----------------------------------------------->
-            <!-- JS: Boostrap, Firebase, API related    -->
-            <!----------------------------------------------->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-                crossorigin="anonymous">
-                </script>
+    </nav>
 
-            <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+    <div class="container" id="formDiv">
+        <h2>Edit your profile</h2>
+        <br>
+        <div class="row">
+            <div class="col-sm">
+                <h5 class="styleTitle">Write About Yourself</h5>
 
-            <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-            <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+                <body style="background-color: #333333;"></body>
+                <div class="container">
+                    <textarea id="aboutMe" class="styleBox" type="text" placeholder="About Me" >
+                        </textarea>
+                </div>
+                <br> 
+                <br>
+                <div class="container">
+                    <h5 class="styleTitle">Choose Streaming Services</h5>
+                    <br>
+                    <input id="amazon" class="styleCheck" type="checkbox">
+                    <label class="form-check-label"> Amazon Prime </label>
+                    <br>
+                    <input id="netflix" class="styleCheck" type="checkbox">
+                    <label class="form-check-label"> Netflix </label>
+                    <br>
+                    <input id="disney" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Disney+ </label>
+                    <br>
+                    <input id="hulu" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Hulu </label>
+                    <br>
+                </div>
+                <br>
+                <div class="container">
+                    <h5 class="styleTitle">Choose Favorite Genre</h5>
+                    <br>
+                    <input id="anime" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Anime </label>
+                    <br>
+                    <input id="action" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Action </label>
+                    <br>
+                    <input id="comedy" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Comedy </label>
+                    <br>
+                    <input id="drama" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Drama </label>
+                    <br>
+                    <input id="documentary" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Documentary </label>
+                    <br>
+                    <input id="horror" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Horror </label>
+                    <br>
+                    <input id="mystery" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Mystery </label>
+                    <br>
+                    <input id="romance" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Romance </label>
+                    <br>
+                    <input id="scienceFiction" class="styleBox" type="checkbox">
+                    <label class="form-check-label"> Science Fiction </label>
+                    <br>
+                    <br>
+                    <button type="button" id="save" class="btn btn-outline-success">Save</button>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!----------------------------------------------->
+    <!-- JS: Boostrap, Firebase, API related    -->
+    <!----------------------------------------------->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        </script>
 
-            <!-- Add Firebase products that you want to use -->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-            <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-            <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 
 
-            <!-- Link to the api keys for your firebase project -->
-            <script src="scripts/firebase_api_kaz.js"></script>
+    <!-- Link to the api keys for your firebase project -->
+    <script src="scripts/firebase_api_kaz.js"></script>
 
-            <!--------------------------------------------------------------------->
-            <!-- JS files: Your own JavaScript functions included here    -->
-            <!--------------------------------------------------------------------->
+    <!--------------------------------------------------------------------->
+    <!-- JS files: Your own JavaScript functions included here    -->
+    <!--------------------------------------------------------------------->
 
-            <script src="./scripts/edit_profile.js"></script>
-            </body>
+    <script src="./scripts/edit_profile.js"></script>
+</body>
 
 </html>
