updated my pages

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -74,29 +74,14 @@
                     <input id="anime" class="styleBox" type="checkbox">
                     <label class="form-check-label"> Anime </label>
                     <br>
-                    <input id="action" class="styleBox" type="checkbox">
-                    <label class="form-check-label"> Action </label>
-                    <br>
                     <input id="comedy" class="styleBox" type="checkbox">
                     <label class="form-check-label"> Comedy </label>
-                    <br>
-                    <input id="drama" class="styleBox" type="checkbox">
-                    <label class="form-check-label"> Drama </label>
-                    <br>
-                    <input id="documentary" class="styleBox" type="checkbox">
-                    <label class="form-check-label"> Documentary </label>
-                    <br>
-                    <input id="horror" class="styleBox" type="checkbox">
-                    <label class="form-check-label"> Horror </label>
                     <br>
                     <input id="mystery" class="styleBox" type="checkbox">
                     <label class="form-check-label"> Mystery </label>
                     <br>
                     <input id="romance" class="styleBox" type="checkbox">
                     <label class="form-check-label"> Romance </label>
-                    <br>
-                    <input id="scienceFiction" class="styleBox" type="checkbox">
-                    <label class="form-check-label"> Science Fiction </label>
                     <br>
                     <br>
                     <button type="button" id="save" class="btn btn-outline-success">Save</button>
@@ -132,7 +117,7 @@
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
 
-    <script src="./scripts/edit_profile.js"></script>
+    <script src="/scripts/edit_profile.js"></script>
 </body>
 
 </html>
