--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <title>My BCIT Project</title>
     <meta name="comp1800 boilerplate code" content="my bcit project">
     <meta name="author" content="BCIT">
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="/styles/profile.css">
 
     <!-- Bootstrap for Mobile-first, and JQuery -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
